tests/cases/compiler/classWithEmptyTypeParameter.ts
class C<> { //~ERROR: Type parameter list cannot be empty.
}